--- a/index.html
+++ b/index.html
@@ -32,7 +32,45 @@
 					
 				</div>
 			</header>
-			<div id="content"></div>
+			<div id="content">
+				<section class="secton1">
+					<div class="wrap">
+						<div class="text">
+							<h2>虚幻4经验分享</h2>
+							<p>虚幻引擎是一个强大的免费工具，利用它来创建你自己的虚拟世界</p>
+							<p>您可以通过以下的链接来访问unre官网以及一些国内知名人士的微博</p>
+							<div class="line"></div>
+						</div>
+						<div class="icon">
+							<span class="pic"><img src="img/unreal.png"><a href="https://www.unrealengine.com/zh-CN/what-is-unreal-engine-4">unreal4</a></span>
+							<span class="pic"><img src="img/epic.png"><a href="https://www.epicgames.com/store/zh-CN/?sessionInvalidated=true">EPIC</a></span>
+							<span class="pic"><img src="img/sina.png"><a href="https://weibo.com/fyqd">飞燕群岛</a></span>
+							</div>
+					</div>
+				</section>
+				<section class="section2">
+					<div class="sec clear_fix">
+						<div class="secimg"><img src="img/csgo.jpg"></div>
+						<div class="sectext">
+						<h2>进入CSGO的世界</h2>
+						<p>用枪支粉碎生活中的虚伪</p>
+						<p>用友情诠释生命的真谛</p>
+						<p>码农的闲暇时间也需要放松，来加入我的CSGO战队</p>
+						</div>
+					</div>
+				</section>
+				<section class="section3">
+					<div class="third clear_fix">
+						<div class="thirdimg"><img src="img/music.jpg"></div>
+						<div class="thirdtext">
+							<h2>闲暇之余玩玩音乐</h2>
+							<p>谁都存在感性思维，程序猿也是一样</p>
+							<p>谁都可以写出旋律，即使它不是很动听</p>
+							<p>但把这当成一种业余爱好，论谁也不会有异议</p>
+						</div>
+					</div>
+				</section>
+			</div>
 			<div id="footer"></div>
 		</div>
 	</body>
