--- a/index.html
+++ b/index.html
@@ -1,77 +1,32 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8" />
-		<title></title>
+		<meta charset="UTF-8">
+		 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<link rel="stylesheet" type="text/css" href="css/reset.css" />
-		<link rel="stylesheet" type="text/css" href="css/main.css" />
-		
+        <link rel="stylesheet" type="text/css" href="css/title.css"/>
+		<title>裹尸布の巡礼</title>
 	</head>
 	<body>
-		<div id="wrap">
-			<header id="header">
-				<nav>
-					<ul class="clear_fix">
-						<li class="logo"><a href="#">裹尸布の巡礼</a></li>
-						<li><a href="">个人中心</a></li>
-						<li><a href="">粉丝</a></li>
-						<li><a href="">收藏</a></li>
-						<li><a href="">首页</a></li>
-					</ul>
-				</nav>
-				<div class="banner">
-					<div class="inner">
-						<div class="line"></div>
-						<h1>裹尸布の巡礼</h1>
-						<div class="line"></div>
-						<p>HUT在校肥宅</p>
-						<p>QQ：1603749510</p>
-						<button>变身吧</button>
-						<p class="more">more</p>
-					</div>
-					
-				</div>
-			</header>
-			<div id="content">
-				<section class="secton1">
-					<div class="wrap">
-						<div class="text">
-							<h2>虚幻4经验分享</h2>
-							<p>虚幻引擎是一个强大的免费工具，利用它来创建你自己的虚拟世界</p>
-							<p>您可以通过以下的链接来访问unre官网以及一些国内知名人士的微博</p>
-							<div class="line"></div>
-						</div>
-						<div class="icon">
-							<span class="pic"><img src="img/unreal.png"><a href="https://www.unrealengine.com/zh-CN/what-is-unreal-engine-4">unreal4</a></span>
-							<span class="pic"><img src="img/epic.png"><a href="https://www.epicgames.com/store/zh-CN/?sessionInvalidated=true">EPIC</a></span>
-							<span class="pic"><img src="img/sina.png"><a href="https://weibo.com/fyqd">飞燕群岛</a></span>
-							</div>
-					</div>
-				</section>
-				<section class="section2">
-					<div class="sec clear_fix">
-						<div class="secimg"><img src="img/csgo.jpg"></div>
-						<div class="sectext">
-						<h2>进入CSGO的世界</h2>
-						<p>用枪支粉碎生活中的虚伪</p>
-						<p>用友情诠释生命的真谛</p>
-						<p>码农的闲暇时间也需要放松，来加入我的CSGO战队</p>
-						</div>
-					</div>
-				</section>
-				<section class="section3">
-					<div class="third clear_fix">
-						<div class="thirdimg"><img src="img/music.jpg"></div>
-						<div class="thirdtext">
-							<h2>闲暇之余玩玩音乐</h2>
-							<p>谁都存在感性思维，程序猿也是一样</p>
-							<p>谁都可以写出旋律，即使它不是很动听</p>
-							<p>但把这当成一种业余爱好，论谁也不会有异议</p>
-						</div>
-					</div>
-				</section>
-			</div>
-			<div id="footer"></div>
-		</div>
+		 <iframe frameborder="0" border="1" 
+            marginwidth="0" marginheight="0" 
+            width=333 height=77 
+            src="//music.163.com/outchain/player?type=2&id=506520164&auto=1&height=66"">
+         </iframe>
+		<ul class="banner">
+			<li>
+				<h3>裹尸布の巡礼</h3>
+				<span>证明一下</span>
+			</li>
+			<li><span>第一宅图</span></li>
+			<li><span>第二宅图</span></li>
+			<li><span>第三宅图</span></li>
+			<li><span>第四宅图</span></li>
+			<li><span>第五宅图</span></li>
+			<li><span>第六宅图</span></li>
+			<li><span>第七宅图</span></li>
+			
+		</ul>
+			
 	</body>
 </html>
