--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="UTF-8">
-		 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<link rel="stylesheet" type="text/css" href="css/reset.css" />
+        <meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<link rel="stylesheet" type="text/css" href="css/reset.css" />
         <link rel="stylesheet" type="text/css" href="css/title.css"/>
         <title>裹尸布の巡礼</title>
 	</head>
@@ -11,8 +11,8 @@
 	
 		<ul class="banner">
 			<li>
-				<h3>裹尸布の巡礼</h3>
-				<span>证明一下</span>
+			<h3>裹尸布の巡礼</h3>
+			<span>证明一下</span>
 			</li>
 			<li><span>第一宅图</span></li>
 			<li><span>第二宅图</span></li>
@@ -30,14 +30,7 @@
             <li><h4>人生在世很多事都不必想，很多账都算不过来，想屁！冲上去就好了！怎么不是过一生？像烟花也是过一生，像樱花也是过一生，只要亮过和盛开过不就好了么？ 还有就是不要做会让自己后悔的事，不要让那些爱你的人难过，因为这个世界上，你爱的人固然很少，爱你的人也绝不会多。</h4></li>
             <li><h4>世界上有种故事你看过一遍就不想再看一遍，因为没有解。有些故事仿佛注定，不是因为偶然，也不是因为错过，而是一个解不开的结。如果它恰好是场悲剧，那么它的悲剧在故事开始时就已经注定。</h4></li>
             <li><h4>我们这种人，生来就是要毁灭一些东西。前面是山，我们就爬山，前面是海，我们就渡海，前面是皇宫 ，我们就开炮！</h4></li>
-            <li><h4>我坐在天台上 ,
-            	时光短促又漫长,
-风从我耳边经过,
-带来整个世界的声音,
-风中
-有人弹唱,
-有人舞蹈,
-有人相爱.</h4></li>
+            <li><h4>我坐在天台上,时光短促又漫长,风从我耳边经过,带来整个世界的声音,风中有人弹唱,有人舞蹈,有人相爱.</h4></li>
 		</ul>
 	</body>
 </html>
