--- a/title.html
+++ b/title.html
@@ -17,7 +17,7 @@
 						<li><a href="">个人中心</a></li>
 						<li><a href="">粉丝</a></li>
 						<li><a href="">收藏</a></li>
-						<li><a href="">首页</a></li>
+						<li><a href="index.html">首页</a></li>。
 					</ul>
 				</nav>
 				<div class="banner">
