--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         	<ul class="textbanner">
         	<li><h4>所谓无悔之爱应该是那样一种东西吧……未必要完美无缺，未必要有好结果，但多年之后你在人海中忽然抬起头来，见远处她独立如礁石，你忽然惊悸忽然震动忽然潸然泪下，速度快到来不及恨或者悲伤。只是爱，不后悔。</h4></li>
 			<li><h4>人不是断气的时候才真的死了。有人说人会死三次，第一次是他断气的时候 ，从生物学上他死了；第二次是他下葬的时候，人们来参加他的葬礼，怀念他的一生，然后在社会上他死了，不再会有他的位置；第三次是最后一个记得他的人把他忘记的时候，那时候他才真正的死了。</h4></li>
-			<li><h4>会有结果的希望都是有毒的哦<br/>就像是小女孩用来暖和自己的火柴<br/>可是该燃烧的<br/>还是会烧起来的。</h4></li>
+			<li><h4>会有结果的希望都是有毒的哦<br/>就像是小女孩用来暖和自己的火柴<br/>可是该燃烧的<br/>还是会烧起来的</h4></li>
             <li><h4>人生在世很多事都不必想，很多账都算不过来，想屁！冲上去就好了！怎么不是过一生？像烟花也是过一生，像樱花也是过一生，只要亮过和盛开过不就好了么？ 还有就是不要做会让自己后悔的事，不要让那些爱你的人难过，因为这个世界上，你爱的人固然很少，爱你的人也绝不会多。</h4></li>
             <li><h4>世界上有种故事你看过一遍就不想再看一遍，因为没有解。有些故事仿佛注定，不是因为偶然，也不是因为错过，而是一个解不开的结。如果它恰好是场悲剧，那么它的悲剧在故事开始时就已经注定。</h4></li>
             <li><h4>我们这种人，生来就是要毁灭一些东西。前面是山，我们就爬山，前面是海，我们就渡海，前面是皇宫 ，我们就开炮！</h4></li>
-            <li><h4>我坐在天台上 ,时光短促又漫长<br/>风从我耳边经过,带来整个世界的声音<br/>风中有人弹唱,有人舞蹈,有人相爱。</h4></li>
+            <li><h4>我坐在天台上 ,时光短促又漫长<br/>风从我耳边经过,带来整个世界的声音<br/>风中有人弹唱,有人舞蹈,有人相爱</h4></li>
             <li><h4>Forever</h4></li>
         	</ul>
              
