--- a/title.html
+++ b/title.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="shortcut icon" href="img/titleico.ico" type="image/x-icon">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>裹尸布の巡礼</title>
 		<link rel="stylesheet" type="text/css" href="css/reset.css" />
 		<link rel="stylesheet" type="text/css" href="css/main.css" />
-		
 	</head>
 	<body>
+		<ul class="banner">
+			<li>
+				<h3></h3>
+				<span>证明一下</span>
+			</li>
+			<li><span>第一宅图</span></li>
+			<li><span>第二宅图</span></li>
+			<li><span>第三宅图</span></li>
+			<li><span>第四宅图</span></li>
+			<li><span>第五宅图</span></li>
+			<li><span>第六宅图</span></li>
+			<li><span>第七宅图</span></li>
+		</ul>
 		<div id="wrap">
 			<header id="header">
 				<nav>
@@ -18,10 +29,10 @@
 						<li><a href="">个人中心</a></li>
 						<li><a href="">粉丝</a></li>
 						<li><a href="">收藏</a></li>
-						<li><a href="index.html">首页</a></li>。
+						<li><a href="index.html">首页</a></li>
 					</ul>
 				</nav>
-				<div class="banner">
+				<div class="banner1">
 					<div class="inner">
 						<div class="line"></div>
 						<h1>裹尸布の巡礼</h1>
@@ -73,16 +84,41 @@
 					</div>
 				</section>
 				<section class="section4">
-					<div class="lastwrap">
+					<div class="treewrap">
 						<div class="title">
 							<h2>记录生活的点滴</h2>
 							<div class="line"></div>
-							<p>八重樱世界第一可爱</p>
+							<p>Something For Nothing</p>
+						</div>
+						<div class="card clear_fix">
+							<div class="cardcore">
+								<a href="#">博客的诞生</a>
+								<div class="line1"></div>
+								<p>2019年2月10号，网站第一次有所记录，感谢坚持..............</p>
+							</div>
+							<div class="cardcore">
+								<a href="#">虚幻4赛车demo</a>
+								<div class="line1"></div>
+								<p>寒假制作的一个赛车demo，包括主界面，是一个比较完善的demo，即将提供下载。</p>
+							</div>
+							<div class="cardcore">
+								<a href="#">关于CSGO</a>
+								<div class="line1"></div>
+								<p>我的steam名字就是网站名字，想要一起玩的可以加好友。</p>
+							</div>
+							<div class="cardcore">
+								<a href="#">最近没有什么其他打算</a>
+								<div class="line1"></div>
+								<p>水一水</p>
+							</div>
 						</div>
 					</div>
 				</section>
 			</div>
-			<div id="footer"></div>
+			<div id="footer">
+				<p>善恶错乱之世</p>
+				<p>同病相怜之人</p>
+			</div>
 		</div>
 	</body>
 </html>
